--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [program:bitcoin-cash]
 command = /entrypoint.sh bitcoind
-stop-command = /usr/local/bin/bitcoin-cli --datadir=/data stop
+stop-command = /usr/local/bin/bitcoin-cli stop
 autostart = true
 autorestart = true
 startsecs = 5
