--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [program:bitcoin-cash]
-command = /entrypoint.sh bitcoind
+command = /usr/local/bin/bitcoind --conf=/etc/bitcoind/bitcoin.conf
 stop-command = /usr/local/bin/bitcoin-cli stop
 autostart = true
 autorestart = true
