--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,3 +18,12 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
+
+[program:conf-symlink]
+command = ln -sf /etc/bitcoincashd/bitcoincash.conf /root/.bitcoin/bitcoin.conf
+startsecs	= 0
+autorestart	= false
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
